--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="for--desktop">
+    <div id="desktop-content-wrapper">
         <!-- <div class="cursor"></div> -->
         <div class="for--desktop__main">
 
@@ -26,7 +26,7 @@
                     </ul>
                 </nav>
                 <div class="logo-wrapper">
-                    <svg viewBox="0 0 1000 173.91">
+                    <svg viewBox="0 0 1000 173.91" width="100%" height="auto">
                         <path class="cls-1"
                             d="M71.2,151.9c-1.13-1.13-1.7-2.5-1.7-4.1V48.2c0-1.47.57-2.8,1.7-4,1.13-1.2,2.5-1.8,4.1-1.8h10.6c1.6,0,2.97-.57,4.1-1.7,1.13-1.13,1.7-2.43,1.7-3.9v-10.8c0-1.47.6-2.8,1.8-4,1.2-1.2,2.53-1.8,4-1.8h208.84c1.46,0,2.8.6,4,1.8,1.2,1.2,1.8,2.53,1.8,4v10.8c0,1.47.57,2.77,1.7,3.9,1.13,1.13,2.43,1.7,3.9,1.7h10.8c1.47,0,2.8.6,4,1.8,1.2,1.2,1.8,2.53,1.8,4v99.6c0,1.6-.6,2.97-1.8,4.1-1.2,1.13-2.53,1.7-4,1.7h-10.8c-1.47,0-2.77-.57-3.9-1.7-1.13-1.13-1.7-2.5-1.7-4.1v-32.8c0-1.6-.6-2.97-1.8-4.1-1.2-1.13-2.54-1.7-4-1.7H97.5c-1.47,0-2.8.57-4,1.7-1.2,1.13-1.8,2.5-1.8,4.1v32.8c0,1.6-.57,2.97-1.7,4.1s-2.5,1.7-4.1,1.7h-10.6c-1.6,0-2.97-.57-4.1-1.7ZM306.34,87c1.46,0,2.8-.6,4-1.8,1.2-1.2,1.8-2.53,1.8-4v-33c0-1.47-.6-2.8-1.8-4-1.2-1.2-2.54-1.8-4-1.8H97.5c-1.47,0-2.8.6-4,1.8-1.2,1.2-1.8,2.53-1.8,4v33c0,1.47.6,2.8,1.8,4,1.2,1.2,2.53,1.8,4,1.8h208.84Z" />
                         <path class="cls-1"
@@ -148,7 +148,7 @@
                     </ul>
                 </nav>
                 <div class="logo-wrapper">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42" width="100%" height="auto">
                         <path class="cls-1"
                             d="M22.67,143.15c-.85-.85-1.27-1.88-1.27-3.08v-74.7c0-1.1.42-2.1,1.27-3,.85-.9,1.88-1.35,3.08-1.35h7.95c1.2,0,2.22-.42,3.08-1.27.85-.85,1.27-1.82,1.27-2.93v-8.1c0-1.1.45-2.1,1.35-3,.9-.9,1.9-1.35,3-1.35h144.56c1.1,0,2.1.45,3,1.35.9.9,1.35,1.9,1.35,3v8.1c0,1.1.42,2.08,1.27,2.93.85.85,1.82,1.27,2.92,1.27h8.1c1.1,0,2.1.45,3,1.35.9.9,1.35,1.9,1.35,3v74.7c0,1.2-.45,2.23-1.35,3.08-.9.85-1.9,1.27-3,1.27h-8.1c-1.1,0-2.08-.42-2.92-1.27-.85-.85-1.27-1.88-1.27-3.08v-24.6c0-1.2-.45-2.22-1.35-3.07-.9-.85-1.9-1.27-3-1.27H42.4c-1.1,0-2.1.43-3,1.27-.9.85-1.35,1.88-1.35,3.07v24.6c0,1.2-.43,2.23-1.27,3.08-.85.85-1.88,1.27-3.08,1.27h-7.95c-1.2,0-2.23-.42-3.08-1.27ZM186.96,94.47c1.1,0,2.1-.45,3-1.35.9-.9,1.35-1.9,1.35-3v-24.75c0-1.1-.45-2.1-1.35-3-.9-.9-1.9-1.35-3-1.35H42.4c-1.1,0-2.1.45-3,1.35-.9.9-1.35,1.9-1.35,3v24.75c0,1.1.45,2.1,1.35,3,.9.9,1.9,1.35,3,1.35h144.56Z" />
                         <path class="cls-1"
