--- a/productions.html
+++ b/productions.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="for--desktop">
+    <div id="desktop-content-wrapper">
         <!-- <div class="cursor"></div> -->
         <div class="for--desktop__main">
 
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="logo-wrapper">
                     <div id="prod-svg">
-                        <svg viewBox="0 0 1000 173.91">
+                        <svg viewBox="0 0 1000 173.91" width="100%" height="auto">
                             <path class="cls-1"
                                 d="M42.13,153.31c-1.13-1.13-1.7-2.5-1.7-4.1V27.41c0-1.47.57-2.8,1.7-4,1.13-1.2,2.5-1.8,4.1-1.8h80.09c1.46,0,2.8.6,4,1.8,1.2,1.2,1.8,2.53,1.8,4v10.8c0,1.47.57,2.77,1.7,3.9,1.13,1.13,2.43,1.7,3.9,1.7h10.8c1.47,0,2.8.6,4,1.79,1.2,1.19,1.8,2.52,1.8,3.98v32.85c0,1.46-.6,2.79-1.8,3.98-1.2,1.19-2.53,1.79-4,1.79h-10.8c-1.47,0-2.77.57-3.9,1.7-1.13,1.13-1.7,2.5-1.7,4.1v10.6c0,1.47-.6,2.8-1.8,4-1.2,1.2-2.54,1.8-4,1.8h-57.89c-1.47,0-2.8.57-4,1.71s-1.8,2.51-1.8,4.12v32.95c0,1.61-.57,2.98-1.7,4.12-1.13,1.14-2.5,1.71-4.1,1.71h-10.6c-1.6,0-2.97-.57-4.1-1.7ZM126.32,88.21c1.46,0,2.8-.6,4-1.79,1.2-1.19,1.8-2.52,1.8-3.98v-32.85c0-1.46-.6-2.79-1.8-3.98-1.2-1.19-2.54-1.79-4-1.79h-57.89c-1.47,0-2.8.6-4,1.79s-1.8,2.52-1.8,3.98v32.85c0,1.46.6,2.79,1.8,3.98,1.2,1.19,2.53,1.79,4,1.79h57.89Z" />
                             <path class="cls-1"
@@ -138,7 +138,7 @@
                 </nav>
                 <div class="logo-wrapper">
                     <div id="prod-svg">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42" width="100%" height="auto">
                             <path class="cls-1"
                                 d="M18.98,143.39c-.85-.85-1.27-1.88-1.27-3.08V48.97c0-1.1.42-2.1,1.27-3,.85-.9,1.88-1.35,3.08-1.35h35.1c1.1,0,2.1.45,3,1.35.9.9,1.35,1.9,1.35,3v8.1c0,1.1.42,2.08,1.27,2.93.85.85,1.82,1.27,2.92,1.27h8.1c1.1,0,2.1.45,3,1.35.9.9,1.35,1.89,1.35,2.99v24.64c0,1.1-.45,2.09-1.35,2.99-.9.9-1.9,1.34-3,1.34h-8.1c-1.1,0-2.08.43-2.92,1.27-.85.85-1.27,1.88-1.27,3.08v7.95c0,1.1-.45,2.1-1.35,3-.9.9-1.9,1.35-3,1.35h-18.45c-1.1,0-2.1.43-3,1.28-.9.85-1.35,1.88-1.35,3.09v24.71c0,1.2-.43,2.24-1.27,3.09-.85.85-1.88,1.28-3.08,1.28h-7.95c-1.2,0-2.23-.42-3.08-1.27ZM57.15,94.57c1.1,0,2.1-.45,3-1.34.9-.9,1.35-1.89,1.35-2.99v-24.64c0-1.09-.45-2.09-1.35-2.99-.9-.9-1.9-1.35-3-1.35h-18.45c-1.1,0-2.1.45-3,1.35-.9.9-1.35,1.89-1.35,2.99v24.64c0,1.1.45,2.09,1.35,2.99.9.9,1.9,1.34,3,1.34h18.45Z" />
                             <path class="cls-1"
