--- a/scanz.html
+++ b/scanz.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="for--desktop">
+    <div id="desktop-content-wrapper">
         <!-- <div class="cursor"></div> -->
         <div class="for--desktop__main">
 
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="logo-wrapper">
                     <div id="prod-svg">
-                        <svg viewBox="0 0 1000 173.91">
+                        <svg viewBox="0 0 1000 173.91" width="100%" height="auto">
                             <path class="cls-1"
                                 d="M59.35,151.85c-1.13-1.13-1.7-2.5-1.7-4.1v-10.6c0-1.6.57-2.97,1.7-4.1,1.13-1.13,2.5-1.7,4.1-1.7l121.91.1c1.47,0,2.77-.57,3.9-1.7,1.13-1.13,1.7-2.5,1.7-4.1v-10.6c0-1.6-.57-2.97-1.7-4.1-1.13-1.13-2.43-1.7-3.9-1.7h-48.99c-1.47,0-2.8-.6-4-1.8-1.2-1.2-1.8-2.53-1.8-4v-10.6c0-1.6-.57-2.97-1.7-4.1-1.13-1.13-2.5-1.7-4.1-1.7h-54.79c-1.47,0-2.8-.6-4-1.82-1.2-1.21-1.8-2.56-1.8-4.04v-10.9c0-1.48-.57-2.79-1.7-3.93-1.13-1.14-2.5-1.72-4.1-1.72l-18.22-.1c-1.6,0-2.97-.59-4.1-1.78-1.13-1.19-1.7-2.51-1.7-3.96v-10.71c0-1.45.57-2.77,1.7-3.96,1.13-1.19,2.5-1.78,4.1-1.78l18.22.1c1.6,0,2.97-.57,4.1-1.7,1.13-1.13,1.7-2.43,1.7-3.9v-10.8c0-1.47.6-2.8,1.79-4,1.2-1.2,2.53-1.8,3.99-1.8h107.3c1.46,0,2.79.6,3.98,1.8,1.2,1.2,1.8,2.53,1.8,4v10.8c0,1.47-.6,2.77-1.8,3.9-1.2,1.13-2.53,1.7-3.98,1.7h-107.3c-1.46,0-2.79.6-3.99,1.78-1.2,1.19-1.79,2.51-1.79,3.96v10.71c0,1.45.6,2.78,1.8,3.96,1.2,1.19,2.53,1.78,4,1.78h54.79c1.6,0,2.97.57,4.1,1.72,1.13,1.14,1.7,2.46,1.7,3.93v10.9c0,1.48.6,2.83,1.8,4.04,1.2,1.21,2.53,1.82,4,1.82h48.99c1.47,0,2.77.57,3.9,1.7,1.13,1.13,1.7,2.5,1.7,4.1v10.6c0,1.47.59,2.8,1.78,4,1.19,1.2,2.51,1.8,3.96,1.8h10.71c1.45,0,2.77.57,3.96,1.7,1.19,1.13,1.78,2.5,1.78,4.1v10.6c0,1.6-.6,2.97-1.78,4.1-1.19,1.13-2.51,1.7-3.96,1.7h-10.71c-1.45,0-2.78.57-3.96,1.7-1.19,1.13-1.78,2.5-1.78,4.1v10.6c0,1.6-.57,2.97-1.7,4.1-1.13,1.13-2.43,1.7-3.9,1.7l-121.91-.1c-1.6,0-2.97-.57-4.1-1.7Z" />
                             <path class="cls-1"
@@ -102,7 +102,7 @@
                 </nav>
                 <div class="logo-wrapper">
                     <div id="prod-svg">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42" width="100%" height="auto">
                             <path class="cls-1"
                                 d="M16.22,149.6c-.85-.85-1.27-1.88-1.27-3.08v-7.95c0-1.2.42-2.22,1.27-3.08s1.88-1.27,3.08-1.27h143.67c1.1,0,2.07-.42,2.92-1.27s1.27-1.88,1.27-3.08v-7.95c0-1.2-.43-2.22-1.27-3.07-.85-.85-1.83-1.27-2.92-1.27h-59.21c-1.1,0-2.1-.45-3-1.35-.9-.9-1.35-1.9-1.35-3v-7.95c0-1.2-.43-2.22-1.28-3.07-.85-.85-1.88-1.28-3.08-1.28h-59.1c-1.1,0-2.1-.45-3-1.36-.9-.91-1.35-1.92-1.35-3.03v-8.17c0-1.11-.43-2.09-1.27-2.95-.85-.86-1.88-1.29-3.08-1.29h-7.95c-1.2,0-2.23-.45-3.08-1.34-.85-.89-1.27-1.88-1.27-2.97v-8.03c0-1.09.42-2.08,1.27-2.97.85-.89,1.88-1.34,3.08-1.34h7.95c1.2,0,2.22-.42,3.08-1.27.85-.85,1.27-1.82,1.27-2.93v-8.1c0-1.1.45-2.1,1.35-3,.9-.9,1.89-1.35,2.99-1.35h105.31c1.09,0,2.09.45,2.99,1.35.9.9,1.35,1.9,1.35,3v8.1c0,1.1-.45,2.08-1.35,2.93-.9.85-1.89,1.27-2.99,1.27H35.93c-1.1,0-2.09.45-2.99,1.34-.9.89-1.35,1.88-1.35,2.97v8.03c0,1.09.45,2.08,1.35,2.97.9.89,1.9,1.34,3,1.34h59.1c1.2,0,2.22.43,3.08,1.29.85.86,1.28,1.84,1.28,2.95v8.17c0,1.11.45,2.12,1.35,3.03.9.91,1.9,1.36,3,1.36h59.21c1.1,0,2.07.43,2.92,1.28.85.85,1.27,1.88,1.27,3.07v7.95c0,1.1.45,2.1,1.34,3,.89.9,1.88,1.35,2.97,1.35h8.03c1.09,0,2.08.43,2.97,1.27.89.85,1.34,1.88,1.34,3.07v7.95c0,1.2-.45,2.23-1.34,3.08-.89.85-1.88,1.27-2.97,1.27h-8.03c-1.09,0-2.08.43-2.97,1.27-.89.85-1.34,1.88-1.34,3.08v7.95c0,1.2-.43,2.23-1.27,3.08s-1.83,1.27-2.92,1.27H19.29c-1.2,0-2.23-.42-3.08-1.27Z" />
                             <path class="cls-1"
