--- a/visualizers.html
+++ b/visualizers.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="for--desktop">
+    <div id="desktop-content-wrapper">
         <!-- <div class="cursor"></div> -->
         <div class="for--desktop__main">
 
@@ -30,7 +30,7 @@
                 </nav>
                 <div class="logo-wrapper">
                     <div id="vis-svg">
-                        <svg viewBox="0 0 1000 173.91">
+                        <svg viewBox="0 0 1000 173.91" width="100%" height="auto">
                             <path class="cls-1"
                                 d="M126.38,154.36c-1.2-1.13-1.8-2.5-1.8-4.1v-32.8c0-1.6-.57-2.97-1.7-4.1-1.13-1.13-2.5-1.7-4.1-1.7h-12.84c-1.6,0-2.97-.6-4.1-1.8-1.13-1.2-1.7-2.53-1.7-4v-55.2c0-1.47-.57-2.8-1.7-4-1.13-1.2-2.5-1.8-4.1-1.8h-26.81c-1.6,0-2.97-.57-4.1-1.7-1.13-1.13-1.7-2.43-1.7-3.9v-10.8c0-1.47.57-2.8,1.7-4,1.13-1.2,2.5-1.8,4.1-1.8h51.25c1.6,0,2.97.6,4.1,1.8,1.13,1.2,1.7,2.53,1.7,4v77.4c0,1.47.6,2.8,1.8,4,1.2,1.2,2.53,1.8,4,1.8h35.7c1.6,0,2.97-.6,4.1-1.8,1.13-1.2,1.7-2.53,1.7-4V28.46c0-1.47.6-2.8,1.8-4,1.2-1.2,2.53-1.8,4-1.8h33c1.46,0,2.8.6,4,1.8,1.2,1.2,1.8,2.53,1.8,4v10.8c0,1.47-.6,2.77-1.8,3.9-1.2,1.13-2.54,1.7-4,1.7h-10.8c-1.47,0-2.8.6-4,1.8-1.2,1.2-1.8,2.53-1.8,4v55.2c0,1.47-.57,2.8-1.7,4-1.13,1.2-2.43,1.8-3.9,1.8h-10.8c-1.47,0-2.8.57-4,1.7-1.2,1.13-1.8,2.5-1.8,4.1v32.8c0,1.6-.57,2.97-1.7,4.1s-2.5,1.7-4.1,1.7h-35.7c-1.47,0-2.8-.57-4-1.7Z" />
                             <path class="cls-1"
@@ -431,7 +431,7 @@
                 </nav>
                 <div class="logo-wrapper">
                     <div id="vis-svg">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 547.09 301.42" width="100%" height="auto">
                             <path class="cls-1"
                                 d="M44.23,143.39c-.91-.85-1.36-1.89-1.36-3.1v-24.77c0-1.21-.43-2.24-1.28-3.1-.86-.85-1.89-1.28-3.1-1.28h-8c-1.21,0-2.24-.45-3.1-1.36-.86-.91-1.28-1.91-1.28-3.02v-41.68c0-1.11-.43-2.11-1.28-3.02-.86-.91-1.89-1.36-3.1-1.36h-8c-1.21,0-2.24-.43-3.1-1.28-.86-.85-1.28-1.84-1.28-2.95v-8.16c0-1.11.43-2.11,1.28-3.02.85-.91,1.89-1.36,3.1-1.36h24.77c1.21,0,2.24.45,3.1,1.36.85.91,1.28,1.91,1.28,3.02v58.45c0,1.11.45,2.11,1.36,3.02.91.91,1.91,1.36,3.02,1.36h8c1.21,0,2.24-.45,3.1-1.36.85-.91,1.28-1.91,1.28-3.02v-58.45c0-1.11.45-2.11,1.36-3.02.91-.91,1.91-1.36,3.02-1.36h24.92c1.11,0,2.11.45,3.02,1.36.91.91,1.36,1.91,1.36,3.02v8.16c0,1.11-.45,2.09-1.36,2.95-.91.86-1.91,1.28-3.02,1.28h-8.15c-1.11,0-2.11.45-3.02,1.36-.91.91-1.36,1.91-1.36,3.02v41.68c0,1.11-.43,2.11-1.28,3.02-.86.91-1.84,1.36-2.94,1.36h-8.16c-1.11,0-2.11.43-3.02,1.28-.91.86-1.36,1.89-1.36,3.1v24.77c0,1.21-.43,2.24-1.28,3.1s-1.89,1.28-3.1,1.28h-8c-1.11,0-2.11-.43-3.02-1.28Z" />
                             <path class="cls-1"
